Fixed issue with Hero section and scrollbar

--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,6 +1,7 @@
 #hero {
     background-color: #ffde59;
-    width: 100vw;
+    width: calc(100vw - var(--scrollbar-width, 0px));
+    max-width: 100vw;
     height: 95vh;
     margin: 0;
     padding: 0;
@@ -8,7 +9,7 @@
 
     display: grid;
     grid-template-columns: 25% 40% 35%;
-    grid-template-rows: 50% 12% 12% 26%;
+    grid-template-rows: 50% 14% 15% 21%;
     padding: 15% 0;
 
     text-align: center;
@@ -53,7 +54,7 @@
 
     font-size: 30pt;
     align-self: end;
-    animation: appearFromBottom 0.7s ease-out forwards;
+    animation: appearFromBottomDelayed 0.7s ease-out forwards;
 }
 
 .web-developer-text {
@@ -62,7 +63,7 @@
 
     font-size: 30pt;
     align-self: end;
-    animation: appearFromBottom 0.7s ease-out forwards;
+    animation: appearFromBottomDelayed 0.7s ease-out forwards;
 }
 
 #hero img {
@@ -81,6 +82,21 @@
     transform: translateY(200px);
   }
   to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes appearFromBottomDelayed {
+  0% {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+  15% {
+    opacity: 0;
+    transform: translateY(200px);
+  }
+  100% {
     opacity: 1;
     transform: translateY(0);
   }
